# Simple-Windows-Cryptography

./: CMakeLists.txt  LICENSE.md  README.md  swincrypt.dsp  swincrypt.dsw
.github/workflows/: cmake.yml
resource/: resource.rc
src/: concat_macro.h  error.c  error.h  file.c  file.h  filew.h  generate.c  generate.h  hash_alg.c  hash_alg.h  help.c  help.h  license.c  license.h  main.c  option.c  option.h  sign.c  sign.h  verify.c  verify.h  win32_crypt.c  win32_crypt.h  win9x.c  win9x.h
